# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import contactRouter from "./contact";
 import projectsRouter from "./projects";
+import feedbackRouter from "./feedback";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(contactRouter);
 router.use(projectsRouter);
+router.use(feedbackRouter);
 
 export default router;
