# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./contacts";
 export * from "./projects";
+export * from "./feedback";
